--- a/index.html
+++ b/index.html
@@ -43,31 +43,31 @@
 
 <span class="keyword">class</span> PersonalInfo:
     NAME = <span class="string">"Ts. Dr. Zaaba Ahmad"</span>
-    TITLE = <span class="string">"Lecturer, AI Researcher"</span>
+    TITLE = <span class="string">"Lecturer & AI Researcher"</span>
     EMAIL = <span class="string">"zaaba.ahmad@uitm.edu.my"</span>
     PHONE = <span class="string">"+6017-2988287"</span>
-    LOCATION = <span class="string">"UiTM Perak, Malaysia"</span>
+    LOCATION = <span class="string">"UiTM Cawangan Perak, Malaysia"</span>
     MBOT = <span class="string">"PT19010009"</span>
 
 <span class="keyword">class</span> Resume:
-    PERSONAL_PROFILE = <span class="string">"Committed academic with expertise in NLP, image processing, computer vision, and machine learning. Active in AI research, mental health tech, and national strategy roles."</span>
+    PERSONAL_PROFILE = <span class="string">"Academic and AI practitioner specialising in NLP, computer vision, and mental health technologies, with active roles in smart city, digital twin and national AI initiatives."</span>
 
     ACADEMIC_QUALIFICATIONS = [
-        <span class="string">"PhD (Submitted) – UiTM"</span>,
-        <span class="string">"MSc in Computer Science – USM"</span>,
-        <span class="string">"BSc (Hons.) – UTM"</span>,
+        <span class="string">"PhD in Computer Science (Artificial Intelligence) – UiTM (2025)"</span>,
+        <span class="string">"MSc in Computer Science (Artificial Intelligence) – USM (2015)"</span>,
+        <span class="string">"BSc (Hons.) in Computer Science – UTM (2011)"</span>,
         <span class="string">"Diploma in Computer Electronics – PUO"</span>
     ]
 
     PROFESSIONAL_EXPERIENCE = {
-        <span class="string">"UiTM"</span>: <span class="string">"Lecturer (2016–present): AI, ML, NLP, student mentoring, lab setup"</span>,
-        <span class="string">"Intel"</span>: <span class="string">"Engineer (2006–2014): CPU validation, R&D, automation"</span>
+        <span class="string">"UiTM"</span>: <span class="string">"Lecturer (2016–present): Teaching AI/ML/NLP, supervising FYP and postgraduate students, leading AI innovation and consultancy."</span>,
+        <span class="string">"Intel"</span>: <span class="string">"Engineer (2006–2014): CPU validation, R&amp;D, automation."</span>
     }
 
     TEACHING_PROFILE = [
         <span class="string">"CSC649 - Special Topics in Computer Science"</span>,
         <span class="string">"CSC566 - Image Processing"</span>,
-        <span class="string">"CSC126 - Algorithms & Problem Solving"</span>,
+        <span class="string">"CSC126 - Algorithms &amp; Problem Solving"</span>,
         <span class="string">"ITS480 - Business Data Analytics"</span>,
         <span class="string">"ITT400 - Data Communications"</span>,
         <span class="string">"ITS332 - System Development"</span>,
@@ -75,77 +75,99 @@
     ]
 
     INNOVATIONS = [
-        <span class="string">"Sign Language Detection with YOLOv3"</span>,
-        <span class="string">"Butterfly Detection via CNN"</span>,
-        <span class="string">"MAYA NLP System (Gold Medal)"</span>,
-        <span class="string">"FFB Detection for MPOB"</span>,
-        <span class="string">"AISA Scam Alert System"</span>
+        <span class="string">"MAYA V2 – Multimodal Affective Conversational AI for Mental Health Support"</span>,
+        <span class="string">"AIMI – Multimodal Emotion-Aware AI System for Mental Health Support in Education"</span>,
+        <span class="string">"PAPA – RAG-based AI Assistant for Inclusive Academic Planning"</span>,
+        <span class="string">"VELOCI – Autonomous Road Monitoring and Damage Detection with YOLO and GPS"</span>,
+        <span class="string">"ASLT – Automatic Sign Language Translation System"</span>,
+        <span class="string">"NBIS – Neural Butterfly Identification System"</span>
     ]
 
     RESEARCH_ENGAGEMENTS = [
-        <span class="string">"PhD Internship – Univ. of Melbourne"</span>,
-        <span class="string">"AI Think Tank – UiTM"</span>,
-        <span class="string">"AI Seminar Coordinator"</span>,
-        <span class="string">"Mental Health Grant – IIUM"</span>,
-        <span class="string">"HRDCorp Trainer – AI/ML"</span>
+        <span class="string">"AI Think Tank &amp; Advisor – Putrajaya 2050 Development Plan (Quantum/Smart City)"</span>,
+        <span class="string">"Consultant &amp; Trainer – AI, analytics and digital innovation for public sector and industry"</span>,
+        <span class="string">"Mental Health Grants – AIMI and ADHD Psychoeducation Mobile App (SASMEC@IIUM)"</span>,
+        <span class="string">"PI/Co-PI – AI Receptionist (Ai-Receptionist) and U-ReLAx Hub &amp; AIMI-Humanoid projects"</span>,
+        <span class="string">"HRDCorp Trainer – AI/ML and data analytics"</span>
     ]
 
     GRANTS = [
-        <span class="string">"FRGS – Depression/Anxiety Detection via M-DASS"</span>,
-        <span class="string">"SRG25 – ADHD Psychoeducation App"</span>,
-        <span class="string">"KPT Grant – AIMI System"</span>
+        <span class="string">"SASMEC@IIUM SRG – AI-informed Psychoeducation Mobile App for Parents of Children with ADHD (2025, Active)"</span>,
+        <span class="string">"UiTM Perak Internal Grant – AI-Receptionist with Avatar for Main Administration Building (2026, Approved)"</span>,
+        <span class="string">"UiTM TNCPI Special Project – U-ReLAx Hub &amp; AIMI-Humanoid Benchmarking at World Robot Conference, Beijing (2026, Approved)"</span>,
+        <span class="string">"FRGS – Malay DASS Detection and Classification in Social Media (Completed)"</span>
     ]
 
     MEMBERSHIPS = [
         <span class="string">"Technologist (Ts.) – MBOT"</span>,
-        <span class="string">"IEEE Member"</span>
+        <span class="string">"IEEE Member"</span>,
+        <span class="string">"HRDCorp Registered Trainer (AI/ML)"</span>
     ]
 
 <span class="keyword">class</span> AcademicBackground:
-    PHD = <span class="string">"PhD in Computer Science, UiTM"</span>
-    MSC = <span class="string">"MSc in Computer Science, USM"</span>
+    PHD = <span class="string">"PhD in Computer Science (Artificial Intelligence), UiTM"</span>
+    MSC = <span class="string">"MSc in Computer Science (Artificial Intelligence), USM"</span>
     BSC = <span class="string">"BSc (Hons.) in Computer Science, UTM"</span>
     DIPLOMA = <span class="string">"Diploma in Computer Electronics, PUO"</span>
 
 <span class="keyword">class</span> Skills:
     NLP = [<span class="string">"BERT"</span>, <span class="string">"Word2Vec"</span>, <span class="string">"Transformers"</span>]
-    VISION = [<span class="string">"YOLOv8"</span>, <span class="string">"CNN"</span>, <span class="string">"Attention"</span>]
+    VISION = [<span class="string">"YOLOv8/YOLOv11"</span>, <span class="string">"CNN"</span>, <span class="string">"Attention Mechanisms"</span>]
     PROGRAMMING = [<span class="string">"Python"</span>, <span class="string">"MATLAB"</span>, <span class="string">"TensorFlow"</span>, <span class="string">"PyTorch"</span>]
-    TOOLS = [<span class="string">"PyCharm"</span>, <span class="string">"Jupyter"</span>, <span class="string">"LaTeX"</span>, <span class="string">"Figma"</span>]
+    TOOLS = [<span class="string">"PyCharm"</span>, <span class="string">"Jupyter"</span>, <span class="string">"LaTeX"</span>, <span class="string">"Figma"</span>, <span class="string">"Canva"</span>]
 
 <span class="keyword">class</span> Experience:
-    UiTM = <span class="string">"2016 - Present, Lecturer in AI"</span>
-    Intel = <span class="string">"2006 - 2014, Product Design Engineer"</span>
+    UiTM = <span class="string">"2016 - Present, Lecturer in AI &amp; Computer Science"</span>
+    Intel = <span class="string">"2006 - 2014, Product Design Engineer (CPU Validation &amp; Automation)"</span>
 
 <span class="keyword">class</span> Research:
     CURRENT = [
-        <span class="string">"AIMI - AI Mental Health Counsellor"</span>,
-        <span class="string">"MAYA - Multimodal Affective Conversational AI  "</span>,
-        <span class="string">"ADHD Psychoeducation App (IIUM)"</span>
+        <span class="string">"AIMI – AI Mental Health Counsellor for Educational Institutions"</span>,
+        <span class="string">"MAYA – Multimodal Affective Conversational AI for Mental Health"</span>,
+        <span class="string">"ADHD Psychoeducation Mobile App (SASMEC@IIUM)"</span>,
+        <span class="string">"AI-Receptionist – Avatar-based front desk system for UiTM Perak"</span>,
+        <span class="string">"U-ReLAx Hub &amp; AIMI-Humanoid – AI empathy and humanoid benchmarking"</span>,
+        <span class="string">"Smart City &amp; Digital Twin Applications for Putrajaya 2050"</span>
     ]
     GRANTS = [
-        <span class="string">"FRGS - Malay DASS Classification in Social Media"</span>,
-        <span class="string">"SRG25 - AI Psychoeducation"</span>
+        <span class="string">"SASMEC@IIUM SRG – AI-informed Psychoeducation for Parents of Children with ADHD"</span>,
+        <span class="string">"UiTM Internal – AI-Receptionist for Administrative Services"</span>,
+        <span class="string">"UiTM TNCPI – U-ReLAx Hub &amp; AIMI-Humanoid benchmarking and knowledge transfer"</span>,
+        <span class="string">"FRGS – Malay DASS Classification in Social Media"</span>
     ]
 
 <span class="keyword">class</span> Awards:
     GOLD_MEDALS = [
-        <span class="string">"MAYA V2 - Gold @ INDES 2025"</span>,
-      <span class="string">"MAYA V1 - Gold @ INoDEX 2023"</span>,
-        <span class="string">"ASLT - Gold @ INDES 2019"</span>,
-        <span class="string">"NBIS - Gold @ INDES 2019"</span>
+        <span class="string">"MAYA V2 – Gold @ INDES 2025"</span>,
+        <span class="string">"MAYA V2 – Gold @ IIDEX 2025"</span>,
+        <span class="string">"MAYA V1 – Gold @ INoDEX USM 2023"</span>,
+        <span class="string">"ASLT – Gold @ INDES 2019"</span>,
+        <span class="string">"NBIS – Gold @ INDES 2019"</span>
+    ]
+    OTHER_AWARDS = [
+        <span class="string">"Innovathon 2025 – Finalist (Top 3), Ministry of Economy &amp; MOSTI"</span>,
+        <span class="string">"Business Pitching – 2nd Place, MAYA V2 @ INDES 2025"</span>,
+        <span class="string">"PAPA – Silver Medal, INDES 2025"</span>,
+        <span class="string">"VELOCI – Bronze Medal, INDES 2025"</span>,
+        <span class="string">"Intel Malaysia Scholarship Award (Undergraduate)"</span>,
+        <span class="string">"SLAB/SLAI Scholarship – Master &amp; PhD"</span>,
+        <span class="string">"RIICAN UiTM 2024 – Highest Innovation Ownership Award"</span>
     ]
     COPYRIGHTS = [
-        <span class="string">"MAYA V1 - CRLY2024W00509"</span>,
-        <span class="string">"Malay DASS Dataset - CRLY2024W00511"</span>
+        <span class="string">"MAYA V2 – CRLY2025W11883"</span>,
+        <span class="string">"PAPA – CRLY2025W11855"</span>,
+        <span class="string">"VELOCI – CRLY2025W11854"</span>,
+        <span class="string">"MAYA V1 – CRLY2024W00509"</span>,
+        <span class="string">"Malay DASS Social Media Dataset – CRLY2024W00511"</span>
     ]
 
 <span class="keyword">class</span> Memberships:
-    MBOT = <span class="string">"Technologist (Ts.)"</span>
+    MBOT = <span class="string">"Technologist (Ts.), Malaysia Board of Technologists"</span>
     IEEE = <span class="string">"IEEE Member"</span>
+    HRDCORP = <span class="string">"HRDCorp Registered Trainer (AI/ML)"</span>
 
 <span class="keyword">def</span> greet():
-    <span class="keyword">print</span>(<span class="string">">>> Hello, I'm Zaaba. Let's collaborate on AI for good."</span>)
+    <span class="keyword">print</span>(<span class="string">">> Hello, I'm Zaaba. Let's collaborate on AI for good."</span>)
   </pre>
 </body>
 </html>
