--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
         <div class="hero-photo">
           <div class="hero-photo-inner">
             <!-- Replace with your actual image path / filename -->
-            <img src="zaaba-profile.jpg" alt="Ts. Dr. Zaaba Ahmad" />
+            <img src="Zaaba Tuxedo.png" alt="Ts. Dr. Zaaba Ahmad" />
           </div>
           <div class="hero-photo-label">
             <div class="pill-dot"></div>
