--- a/generate_resume_zaaba.html
+++ b/generate_resume_zaaba.html
@@ -891,13 +891,13 @@
               📄 <span>Download CV (PDF)</span>
             </a>
             <a class="link-chip" href="#" target="_blank" rel="noopener">
-              🔬 <span>Google Scholar</span>
+              🔬 <span>https://scholar.google.com/citations?user=PGhzO-oAAAAJ&hl=en</span>
             </a>
             <a class="link-chip" href="#" target="_blank" rel="noopener">
               🧪 <span>ORCID</span>
             </a>
             <a class="link-chip" href="#" target="_blank" rel="noopener">
-              💼 <span>LinkedIn</span>
+              💼 <span>https://www.linkedin.com/in/zaabaahmad2484/</span>
             </a>
             <a class="link-chip" href="https://github.com/" target="_blank" rel="noopener">
               🐙 <span>GitHub</span>
